# Auth_sprint_2

./: .gitignore  Dockerfile  Dockerfile_circuitbreaker  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  factories.py  mixins.py  models.py  patched.py  settings.py
app/api/: __init__.py  decorators.py
app/api/v1/: __init__.py  auth.py  permissions.py  ping.py  users.py
app/services/: __init__.py  auth.py  base.py  permissions.py  sessions.py  users.py
app/tests/: conftest.py  test_auth.py  test_permissions.py  test_ping.py  test_users.py
config/: .env.template
docker/caddy/: Caddyfile
docker/flask-api/: entrypoint.sh  uwsgi.sh
docker/postgres/: 01_init.sql
migrations/versions/: 20140a07e2d7_.py  65b558441569_.py
proxy/: Dockerfile  app.py  pyproject.toml
