[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Sergey Klimov", "Maxim Rukhlov", "Alex Erdyakov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pybreaker = "^0.6.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
ipython = "^7.26.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
